--- a/crates/toml_formatted_macros/Cargo.toml
+++ b/crates/toml_formatted_macros/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2024"
 proc-macro = true
 
 [dependencies]
-proc-macro2 = "1"
-quote       = "1"
-syn         = { version = "2", features = ["full"] }
+proc-macro2      = "1"
+quote            = "1"
+syn              = { version = "2", features = ["full"] }
+proc-macro-crate = "3.3.0"
 
 toml_formatted_core = { workspace = true }
 # toml_formatted_core = { path = "../toml_formatted_core" }
